--- a/back/css/style1.css
+++ b/back/css/style1.css
@@ -25,7 +25,7 @@ figure
     border:.5px solid #424242;
     border-bottom:0;
     position:absolute;
-    top:-9%;
+    top:-70px;
     left:38%;
     width:390px;
     height:80px
@@ -45,6 +45,7 @@ figure
 {
     width:230px;
     height:65px;
+    margin:auto;
     background:none;
     padding:10px;
     border:0;
@@ -52,7 +53,7 @@ figure
     letter-spacing:3px;
     font-weight:bold;
     border-radius:3%;
-    display:inline-block
+    display:block
 }
 
 .general-button:hover
