--- a/back/css/style1.css
+++ b/back/css/style1.css
@@ -7,12 +7,6 @@ body
     letter-spacing:1.5px
 }
 
-figure
-{
-    margin:0;
-    display:inline-block
-}
-
 .container
 {
     width:80%;
@@ -59,6 +53,13 @@ figure
 .general-button:hover
 {
     cursor:pointer
+}
+
+
+figure
+{
+    margin:0;
+    display:inline-block
 }
 
 /*Reset heads*/
@@ -206,7 +207,7 @@ button#proceed
 section.details
 {
     background:#fff;
-    height:650px;
+    height:1150px;
     position:relative
 }
 
@@ -219,6 +220,28 @@ section.details>div:first-of-type
 section.details>div.sec-head span
 {
     color:#000
+}
+
+/*figure*/
+section.details figure
+{
+    margin:120px auto auto auto
+}
+
+section.details figure figcaption
+{
+    margin-top:70px;
+    font-size:35px;
+    font-weight:bolder; 
+    color:#484D55
+}
+
+section.details h3
+{
+    color:#B1B4BF;
+    margin-top:50px;
+    font-weight:lighter;
+    font-size:130%
 }
 
 
